--- a/src/order-summary-component-main/order-summary-component-main/Order-summary.css
+++ b/src/order-summary-component-main/order-summary-component-main/Order-summary.css
@@ -1,3 +1,14 @@
+html,body{
+   overflow-x: hidden;
+}
+body{
+   min-height: 1oovh;
+   background-color: var(--background-color);
+   background-image: url(images/pattern-background-desktop.svg);
+   background-repeat: no-repeat;
+   background-size: contain;
+   overflow-y: scroll;
+}
 :root {
     --main-font: "Red Hat Display", sans-serif;
     --background-color: hsl (225, 100%, 94%);
@@ -16,17 +27,6 @@
      padding: 0;
      box-sizing: border-box;
  }
- html,body{
-    overflow: hidden;
-}
-body{
-    min-height: 1oovh;
-    background-color: var(--background-color);
-    background-image: url(images/pattern-background-desktop.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    overflow-y: scroll;
-}
 .order-center-container {
     position: relative;
     width: 90%;
