--- a/index.css
+++ b/index.css
@@ -1,44 +1,41 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.table-box
-{
-    margin: 50px auto;
+.last-cell {
+  border-right: none;
 }
-.table-row
-{
-    display: table;
-    width: 80%;
-    margin: 10px auto;
-    font-family: sans-serif;
-    background: transparent;
-    padding: 12px 0;
-    color: #555;
-    font-size: 13px;
-    box-shadow: 0 1px 4px 0 rgba(0,0,5,0.3);
+.main {
+  text-align: center;
 }
-.table-cell
-{
-    display: table-cell;
-    width: 30%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid black;
-    vertical-align: middle;
+.table-box {
+  margin: 50px auto;
 }
-.table-head{
-    background: blue;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
+.table-row {
+  display: table;
+  width: 80%;
+  margin: 10px auto;
+  font-family: sans-serif;
+  background: transparent;
+  padding: 12px 0;
+  color: #555;
+  font-size: 13px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 5, 0.3);
 }
-.table-head .table-cell{
-    border-right: none;
+.table-cell {
+  display: table-cell;
+  width: 30%;
+  text-align: center;
+  padding: 4px 0;
+  border-right: 1px solid black;
+  vertical-align: middle;
 }
-.last-cell{
-    border-right: none;
+.table-head {
+  background: blue;
+  box-shadow: none;
+  color: #fff;
+  font-weight: 600;
 }
-.main{
-    text-align: center;
+.table-head .table-cell {
+  border-right: none;
 }
