--- a/src/fylo-data-storage-component-master/fylo.css
+++ b/src/fylo-data-storage-component-master/fylo.css
@@ -1,122 +1,127 @@
- *{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background-image: url(images/bg-desktop.png);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: contain;
-    background-color: hsl(229, 57%, 11%);
-    height: 100vh;
-    color: hsl(243, 100%, 93%);
-    font-family: 'Raleway', sans-serif;
-    font-size: 14px;
+body {
+  background-image: url(images/bg-desktop.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  background-color: hsl(229, 57%, 11%);
+  height: 100vh;
+  color: hsl(243, 100%, 93%);
+  font-family: 'Raleway', sans-serif;
+  font-size: 14px;
 }
-.container{
-    max-width: 1930px;
-    padding: 13% 15% 20%;
+.box {
+  background-color: hsl(228, 56%, 26%);
+  margin: 0 20px;
 }
-.wrap{
-    width: 100%;
-    display: flex;
-    margin: 0 auto;
-    position: relative;
+.black-dot {
+  background-color: rgb(10, 10, 10);
+  width: 2vmin;
+  height: 2vmin;
+  border-radius: 100%;
+  position: relative;
+  left: 96%;
+  top: 0;
 }
-.box{
-    background-color: hsl(228, 56%, 26%);
-    margin: 0 20px;
+.container {
+  max-width: 1930px;
+  padding: 13% 15% 20%;
 }
-.left{
-    width: 30%;
-    height: 200px;
-    padding: 30px 20px 20px;
-    border-radius: 10px 100px 10px 10px;
+.chat {
+  color: black;
+  font-weight: 700;
+  font-size: 32px;
+  padding: 15px 30px;
+  background-color: white;
+  border-radius: 10px 10px 0 10px;
+  position: absolute;
+  top: -50px;
+  right: 40px;
+  z-index: 1;
 }
-.left-item{
-    padding: 15px;
-    display: flex;
+.chat:after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 60%;
+  border-top: solid 50px white;
+  border-left: solid 50px transparent;
+  border-right: solid 2.15px transparent;
+  border-bottom: solid 10px transparent;
+  left: 114.1px;
+  z-index: -1;
 }
-.files{
-    background: hsl(229, 57%, 11%);
-    margin:0 15px 0 0;
-    border-radius: 10px;
-    padding: 5px 10px;
+.files {
+  background: hsl(229, 57%, 11%);
+  margin: 0 15px 0 0;
+  border-radius: 10px;
+  padding: 5px 10px;
 }
-.icons{
-    width: 25px;
-    display: block;
-    margin:5px auto;
+.icons {
+  width: 25px;
+  display: block;
+  margin: 5px auto;
 }
-.icon-2{
-    padding-top: 4px;
+.icon-2 {
+  padding-top: 4px;
 }
-.right{
-    position: relative;
-    width: 50%;
-    border-radius: 10px;
-    padding: 30px;
-    height: 150px;
-    margin-top: 45px;
+.left {
+  width: 30%;
+  height: 200px;
+  padding: 30px 20px 20px;
+  border-radius: 10px 100px 10px 10px;
 }
-.loading{
-    width: 100%;
-    background: hsl(229, 57%, 11%);
-    border-radius: 50px;
-    border: hsl(229, 57%, 11%);
-    outline: none;
+.left-item {
+  padding: 15px;
+  display: flex;
 }
-.red-gradient{
-    position: relative;
-    width: 80%;
-    padding: 2px;
-    border-radius: 50px;
-    background-image: linear-gradient(to right,hsl(5, 88%, 10%),hsl(357, 100%, 47%));
+.loading {
+  width: 100%;
+  background: hsl(229, 57%, 11%);
+  border-radius: 50px;
+  border: hsl(229, 57%, 11%);
+  outline: none;
 }
-.black-dot{
-    background-color: rgb(10, 10, 10);
-    width: 2vmin;
-    height: 2vmin;
-    border-radius: 100%;
-    position: relative;
-    left: 96%;
-    top:0;
+.right {
+  position: relative;
+  width: 50%;
+  border-radius: 10px;
+  padding: 30px;
+  height: 150px;
+  margin-top: 45px;
 }
-.top{
-    display: flex;
-    justify-content: space-between;
+.red-gradient {
+  position: relative;
+  width: 80%;
+  padding: 2px;
+  border-radius: 50px;
+  background-image: linear-gradient(
+    to right,
+    hsl(5, 88%, 10%),
+    hsl(357, 100%, 47%)
+  );
 }
-.right-item{
-    margin: 10px 10px;
+.right-item {
+  margin: 10px 10px;
 }
-.chat{
-    color: black;
-    font-weight: 700;
-    font-size: 32px;
-    padding: 15px 30px;
-    background-color:white;
-    border-radius: 10px 10px 0 10px;
-    position: absolute;
-    top:-50px;
-    right: 40px;
-    z-index: 1;
+span {
+  font-size: 12px;
+  color: hsl(229, 7%, 55%);
 }
-.chat:after{
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    position: absolute;
-    top:60%;
-    border-top:solid 50px white;
-    border-left:solid 50px transparent;
-    border-right: solid 2.15px transparent;
-    border-bottom: solid 10px transparent;
-    left: 114.1px;
-    z-index: -1;
+.top {
+  display: flex;
+  justify-content: space-between;
 }
-span{
-    font-size: 12px;
-    color: hsl(229, 7%, 55%);
+
+.wrap {
+  width: 100%;
+  display: flex;
+  margin: 0 auto;
+  position: relative;
 }
