--- a/src/huddle-landing-page-with-single-introductory-section-master/Huddle single.css
+++ b/src/huddle-landing-page-with-single-introductory-section-master/Huddle single.css
@@ -1,6 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap');
 
-
+/* font-family: 'Open Sans',
+sans-serif;
+font-family: 'Poppins',
+sans-serif; */
 * {
   margin: 0;
   padding: 0;
@@ -20,30 +23,14 @@ body {
   height: 100vh;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 90%;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  margin: 0 2rem;
-}
-
 .header img {
   width: 170px;
   padding-bottom: 20px;
 }
 
-.main {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
 .hero-text h1 {
   color: #fff;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 36px;
   line-height: 1.7;
   margin-bottom: 20px;
@@ -51,14 +38,14 @@ body {
 
 .hero-text p {
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.8;
   margin-bottom: 30px;
 }
 
 .hero-text a {
   display: inline-block;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: #fff;
   padding: 13px 50px;
   border-radius: 25px;
@@ -71,69 +58,81 @@ body {
   background-color: hsl(300, 69%, 71%);
   color: white;
 }
-
-.social {
-  text-align: right;
+.hero-text h1 {
+  line-height: 1.5;
+  font-size: 26px;
 }
 
-.social a i {
-  color: #fff;
-  position: relative;
-  font-size: 18px;
-  transition: all 0.3s ease;
+.hero-text a {
+  padding: 10px 70px;
 }
-
-.social a:not(:first-child) {
-  margin-left: 2rem;
-}
-
-.social a:nth-child(2) {
-  margin-left: 2.4rem;
-}
-
-.social a i::after {
-  content: "";
-  position: absolute;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  border: 2px solid white;
-  left: -14px;
-  bottom: -13px;
-  transition: all 0.3s ease;
-}
-
-.social a:hover i {
-  color: hsl(300, 69%, 71%);
-}
-
-.social a i:hover::after {
-  border-color: hsl(300, 69%, 71%);
-}
-
 @media only screen and (max-width: 1440px) {
   .hero-img img {
     width: 100%;
   }
-}
-
-@media only screen and (max-width: 768px) {
   .main {
-    flex-direction: column;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+  @media only screen and (max-width: 768px) {
+    .main {
+      flex-direction: column;
+      text-align: center;
+    }
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 90%;
+      padding-top: 40px;
+      padding-bottom: 40px;
+      margin: 0 2rem;
+    }
+
+    .social {
+      text-align: right;
+    }
+
+    .social a i {
+      color: #fff;
+      position: relative;
+      font-size: 18px;
+
+      transition: all 0.3s ease;
+    }
+
+    .social a:not(:first-child) {
+      margin-left: 2rem;
+    }
+
+    .social a:nth-child(2) {
+      margin-left: 2.4rem;
+    }
+
+    .social a i::after {
+      content: '';
+      position: absolute;
+      height: 40px;
+      width: 40px;
+      border-radius: 50%;
+      border: 2px solid white;
+      left: -14px;
+      bottom: -13px;
+      transition: all 0.3s ease;
+    }
+
+    .social a:hover i {
+      color: hsl(300, 69%, 71%);
+    }
+
+    .social a i:hover::after {
+      border-color: hsl(300, 69%, 71%);
+    }
   }
 
   .social {
     text-align: center;
     margin-top: 50px;
-  }
-
-  .hero-text h1 {
-    line-height: 1.5;
-    font-size: 26px;
-  }
-
-  .hero-text a {
-    padding: 10px 70px;
   }
 }
