--- a/Themes/index.css
+++ b/Themes/index.css
@@ -1,41 +1,84 @@
-* {
-  margin: 0;
-  padding: 0;
+.banner {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url(../images/backgroundpage.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
 }
-.last-cell {
-  border-right: none;
+.navbar {
+  align-items: center;
+  display: flex;
+  margin: auto;
+  padding: 35px 0;
+  justify-content: space-between;
+  width: 85%;
 }
-.main {
+.logo {
+  border-radius: 25px;
+  cursor: pointer;
+  width: 120px;
+}
+.navbar ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 20px;
+  position: relative;
+}
+.navbar ul li a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.navbar ul li::after {
+  content: '';
+  bottom: -10px;
+  background: lightseagreen;
+  height: 3px;
+  position: absolute;
+  left: 0;
+  transition: 0.5s;
+  width: 0;
+}
+.navbar ul li:hover::after {
+  width: 100%;
+}
+.head {
+  color: white;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   text-align: center;
+  width: 100%;
 }
-.table-box {
-  margin: 50px auto;
-}
-.table-row {
+button {
+  border: 2px solid lightseagreen;
   background: transparent;
-  box-shadow: 0 1px 4px 0 rgba(0, 0, 5, 0.3);
-  color: #555;
-  display: table;
-  font-size: 13px;
-  font-family: sans-serif;
-  margin: 10px auto;
-  padding: 12px 0;
-  width: 80%;
-}
-.table-cell {
-  border-right: 1px solid black;
-  display: table-cell;
-  padding: 4px 0;
+  border-radius: 25px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 15px 0;
   text-align: center;
-  vertical-align: middle;
-  width: 30%;
+  margin: 20px 10px;
+  position: relative;
+  overflow: hidden;
+  width: 200px;
 }
-.table-head {
-  background: blue;
-  box-shadow: none;
-  color: #fff;
-  font-weight: 600;
+span {
+  background: lightseagreen;
+  bottom: 0;
+  border-radius: 25px;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  transition: 0.5s;
+  width: 0;
+  z-index: -1;
 }
-.table-head .table-cell {
-  border-right: none;
+button:hover span {
+  width: 100%;
+}
+button:hover {
+  border: none;
 }
