--- a/Themes/about-me.css
+++ b/Themes/about-me.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(../../images/abtme.jpg);
+    url(../images/abtme.jpg);
   background-size: cover;
   background-position: center;
 }
