--- a/theme/index.css
+++ b/theme/index.css
@@ -1,6 +1,6 @@
 .banner {
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(../images/backgroundpage.jpg);
+    url('../images/backgroundpage.jpg');
   background-size: cover;
   background-position: center;
   height: 100vh;
