--- a/theme/about-me.css
+++ b/theme/about-me.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(../images/abtme.jpg);
+    url(https://cdn.xxl.thumbs.canstockphoto.com/about-me-stock-photo_csp32110446.jpg);
   background-size: cover;
   background-position: center;
 }
