--- a/Tasks/frontpage.css
+++ b/Tasks/frontpage.css
@@ -2,7 +2,6 @@
   display: grid;
   grid-template-columns: 0.5fr 2fr 2fr 3fr;
   background: white;
-  height: 100%;
   border: 1px solid lavender;
   border-radius: 5px;
 }
@@ -11,12 +10,30 @@
   border-right: 1px solid lightgray;
 }
 .logo {
+  position: relative;
+  display: inline-block;
   border-bottom: 1px solid lightgray;
 }
 .logo img {
-  padding: 15px;
+  padding: 15px 19px 15px 19px;
   width: 49px;
   cursor: pointer;
+}
+.logo .logoname {
+  visibility: hidden;
+  width: 100px;
+  background-color: rgba(0, 0, 0, 0.418);
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+}
+.logo:hover .logoname {
+  visibility: visible;
 }
 .icons {
   width: 86px;
@@ -33,16 +50,15 @@
   color: #3954fa;
 }
 .dot1,
-.dot2,
-.dot4 {
+.dot2 {
   height: 8px;
   width: 8px;
   background: rgb(48, 123, 236);
   border-radius: 50%;
   display: inline-block;
   position: relative;
-  bottom: 8px;
-  right: 5px;
+  bottom: 10px;
+  right: 4px;
 }
 .dot2 {
   background: rgb(255, 72, 0);
@@ -55,13 +71,19 @@
   cursor: pointer;
 }
 .dot4 {
-  bottom: 62px;
+  height: 8px;
+  width: 8px;
+  background: rgb(48, 123, 236);
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  bottom: 64px;
   left: 45px;
   border: 2px solid white;
 }
 .power {
   font-size: 30px;
-  padding: 25px 20px 20px 28px;
+  text-align: center;
   color: rgba(0, 0, 0, 0.39);
   cursor: pointer;
 }
@@ -179,11 +201,11 @@ h3 {
   border-right: 1px solid lightgray;
   background-color: rgba(255, 250, 250, 0.877);
 }
-.top-heading2 {
+/* .top-heading2 {
   border-bottom: 1px solid lightgray;
   padding: 10px 0px 8px 20px;
   font-size: smaller;
-}
+} */
 .wallet {
   padding: 20px;
 }
@@ -223,14 +245,14 @@ h3 {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
-.options1 {
-  width: 32%;
+.options2 {
+  width: 94px;
   border: 1px solid lightgray;
   border-radius: 10px;
   padding: 5px;
   outline: none;
 }
-.options2 {
+.options1 {
   display: flex;
   justify-content: space-around;
 }
@@ -244,7 +266,7 @@ h3 {
   display: grid;
   grid-template-columns: 66% 25%;
   padding: 2px;
-  height: 45px;
+  height: 70px;
 }
 .logo-img {
   display: grid;
@@ -254,18 +276,17 @@ h3 {
 .col2 {
   display: grid;
   grid-template-columns: 185px 70px;
-  padding: 20px;
+  padding: 0px 20px 15px 20px;
 }
 .clock em,
 .star em {
   padding-right: 5px;
 }
 .button {
-  width: 40%;
   height: 30px;
   border: 1px solid black;
   border-radius: 10px;
-  padding-right: 50px;
+  padding-right: 6px;
   background: black;
   color: white;
   cursor: pointer;
@@ -359,33 +380,24 @@ h3 {
   width: 7px;
   background: rgb(255 134 0);
   border-radius: 50%;
-  border: 1px solid rgba(80, 78, 78, 0.884);
+  border: 1px solid rgb(135 9 241);
   display: block;
   position: relative;
-  bottom: 22px;
+  bottom: 21px;
   left: 10px;
-}
-.profile img {
-  width: 30px;
-  border-radius: 50%;
-  height: 30px;
-  cursor: pointer;
-}
-.profile img:hover {
-  border: 2px solid rgb(30, 31, 31);
 }
 .search-container {
   border: 1px solid rgb(241, 238, 240);
   padding: 10px;
-  border-radius: 20px;
+  border-radius: 5px;
 }
 .search-container em {
   font-size: 20px;
   color: lightgray;
   cursor: pointer;
 }
-.search-container i:hover {
-  background: rgb(241, 241, 241);
+.search-container em:hover {
+  color: rgb(19, 17, 17);
 }
 .search-container input {
   outline: none;
@@ -396,6 +408,39 @@ h3 {
 }
 .slider {
   text-align: center;
+  cursor: grabbing;
+}
+.profile {
+  position: relative;
+  display: inline-block;
+}
+.profile .proname {
+  visibility: hidden;
+  width: 100px;
+  background-color: rgba(0, 0, 0, 0.418);
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 120%;
+  right: 30%;
+}
+.profile:hover .proname {
+  visibility: visible;
+}
+.profile img {
+  width: 30px;
+  border-radius: 50%;
+  height: 30px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.profile img:hover {
+  border: 3px solid lightgray;
 }
 .col3 {
   display: grid;
@@ -424,7 +469,7 @@ h3 {
 .doller2 {
   font-size: x-large;
   font-weight: 600;
-  padding: 5px;
+  padding: 10px;
   font-family: monospace;
 }
 .doller2 span {
@@ -434,6 +479,7 @@ h3 {
 }
 .currency {
   padding-top: 8px;
+  text-align: end;
 }
 .currency button {
   background: black;
@@ -477,13 +523,6 @@ h3 {
   justify-content: center;
   color: white;
 }
-.card2 {
-  border: none;
-  border-radius: 5px;
-  margin: 5px;
-  background: #f5f4f9;
-  justify-content: center;
-}
 .card1 img {
   width: 86%;
   padding: 10px;
@@ -491,6 +530,20 @@ h3 {
 .card-row1 {
   text-align: center;
   padding: 20px 20px 0px 20px;
+}
+.spending {
+  padding: 5px;
+}
+.card2 {
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+  background: #f5f4f9;
+  justify-content: center;
+}
+.spending1 {
+  color: rgb(155, 155, 155);
+  padding: 5px;
 }
 .card2 img {
   width: 86%;
