--- a/Tasks/fontpage.less
+++ b/Tasks/fontpage.less
@@ -2,7 +2,8 @@
 @import "mixin.less";
 .main-container {
   display: grid;
-  grid-template-columns: 0.5fr 2fr 2fr 3fr;
+  .width(100%,0%);
+  grid-template-columns: 0.2fr 2fr 2fr 3fr;
   background: @colour1;
   border: 1px solid @card2;
  .border-radius(5px);
@@ -14,8 +15,11 @@
     display: inline-block;
     border-bottom: 1px solid @colour;
     img {
-      padding: 15px 19px 15px 19px;
-      .width(50px,33px);
+      .padding(15px);
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      .width(61%,0%);
       .curser();
     }
     .logoname {
@@ -57,7 +61,7 @@
    .border-radius(50%);
     .curser();
     .width(30px,30px);
-    padding: 27px;
+    .padding(27px);
   }
   .dot4 {
     .width(8px,8px);
@@ -86,7 +90,7 @@
     .top-heading();
   }
   .headings {
-    padding: 30px;
+    .padding(30px);
     h3 {
       font-family: @font;
       float: left;
@@ -96,27 +100,28 @@
       .heading1 {
         color:@colour3;
         font-size: 13px;
-        padding-left: 45px;
+        .padding1(0px,0px,0px,45px);
       }
       .liveprice1 {
         font-weight: 600;
         font-size:24px;
-        padding: 10px 10px 0px 10px;
+        .padding1(10px,10px,0px,10px);
       }
       .decreasing-price {
         color: @red;
         font-size: 13px;
-        padding-left: 16px;
+      .padding1(0px,0px,0px,16px);
+
         span {
           color:@colour3;
-          padding-left: 10px;
+          .padding1(0px,0px,0px,15px);
         }
       }
     }
   }
   .graph img {
     .width(95%,50%);
-    padding: 10px;
+    .padding(10px);
     margin-top: 14px;
   }
   .heading{
@@ -125,11 +130,11 @@
   .menu {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 20px;
+    .padding(20px);
     .menu1 {
       border: 1px solid @colour;
       .border-radius(5px);
-      padding: 10px;
+      .padding(10px);
       margin: 5px;
       font-size: 30px;
       text-align: center;
@@ -181,7 +186,7 @@
     .top-heading();
   }
   .wallet {
-    padding: 20px;
+    .padding(20px);
     p {
       color:@colour3;
     }
@@ -190,7 +195,7 @@
       .wallet1 em {
         font-size: 30px;
         color:@blue;
-        padding: 4px;
+        .padding(4px);
       }
       .price2 {
         color: rgb(4, 4, 112);
@@ -200,7 +205,7 @@
       }
       .options {
         font-size: 27px;
-        padding-left: 8px;
+        .padding1(0px,0px,0px,8px);
         border: none;
         color:@colour3;
         background-color: @opt-colour;
@@ -213,7 +218,7 @@
     }
   }
   .activity {
-    padding: 20px 20px 3px 20px;
+    .padding1(20px,20px,3px,20px);
     h3 {
       font-weight: bold;
       font-family: @font;
@@ -224,8 +229,8 @@
       .options2 {
         .width(94px,30px);
         border: 1px solid @colour;
-        border-radius: 10px;
-        padding: 5px;
+        .border-radius(10px);
+        .padding(5px);
         outline: none;
       }
     }
@@ -237,12 +242,12 @@
       .col1 {
         display: grid;
         grid-template-columns: 66% 25%;
-        padding: 2px;
+        .padding(2px);
         .width(100%,70px);
         .logo-img {
           display: grid;
           grid-template-columns: 50px 80px;
-          padding: 15px;
+          .padding(15px);
         }
         .btc {
           color:@colour3;
@@ -251,10 +256,10 @@
       .col2 {
         display: grid;
         grid-template-columns: 69% 70px;
-        padding: 0px 20px 13px 20px;
+        .padding1(0px,0px,13px,20px);
         .clock{
           em{
-            padding: 5px 5px 0px 0px;
+            .padding1(5px,5px,0px,0px);
             color:@colour3;
           }
         }
@@ -262,7 +267,7 @@
           .width(70px,30px);
           border: 1px solid @black;
           border-radius: 10px;
-          padding-right: 6px;
+          .padding1(0px,6px,0px,0px);
           background: @black;
           color: @colour1;
           .curser();
@@ -278,17 +283,17 @@
     .heading();
   }
   .history {
-    padding: 0px 20px 20px 20px;
+    .padding1(0px,20px,20px,20px);
     .his-card {
       border: 1px solid @colour;
-      padding: 0px 10px 10px 10px;
+      .padding1(0px,10px,10px,10px);
       .border-radius(5px);
       background: @colour1;
       .history1 {
         display: grid;
         grid-template-columns: 91% 9%;
         .history-col {
-          padding: 20px 10px 10px 10px;
+          .padding1(20px,10px,10px,10px);
           .btc1 {
             color: @dark-gray;
             font-family: @font;
@@ -322,11 +327,11 @@
     display: grid;
     grid-template-columns: 50px 50px 260px 95px 46px;
     border-bottom: 1px solid @colour;
-    padding: 14px 20px 9px 20px;
+    .padding1(14px,20px,9px,20px);
     align-items: center;
     .bell1{
       .gear();
-      padding: 10px 10px 0px 10px;
+      .padding1(10px,10px,0px,10px);
     }
     .dot3 {
       .width(7px,7px);
@@ -354,7 +359,7 @@
         outline: none;
         border: none;
         font-size: 16px;
-        padding-left: 10px;
+        .padding1(0px,0px,0px,10px);
         font-family: @font;
       }
     }
@@ -387,7 +392,7 @@
     }
   }
   .container5 {
-    padding: 20px 0px;
+    .padding(20px);
     .col3 {
       display: grid;
       grid-template-columns: 60% 40%;
@@ -396,38 +401,37 @@
         display: flex;
         img {
           .width(30px,30px);
-          padding-right: 10px;
-          padding-left: 7px;
+          .padding1(0px,10px,0px,7px);
+
         }
       }
       .bitcoin {
-        padding-top: 8px;
+        .padding1(8px,0px,0px,0px);
         font-family: @font;
         font-weight: 500;
          span {
-          padding-top: 8px;
-          padding-left: 8px;
+          .padding1(8px,0px,0px,8px);
           color:@colour3;
         }
       }
       .doller2 {
         font-size: 20px;
         font-weight: 600;
-        padding: 10px;
+        .padding(10px);
         font-family: monospace;
         span {
           font-size: 12px;
-          padding-left: 10px;
+          .padding1(0px,0px,0px,10px);
           color: @green;
         }
       }
       .currency {
-        padding-top: 8px;
+        .padding1(8px,0px,0px,0px);
         text-align: end;
         button {
           background: @black;
           color: @colour1;
-          border-radius: 20px;
+          .border-radius(20px);
           font-size: 10px;
         }
       }
@@ -435,19 +439,19 @@
     .graph3{
       img {
          .width(92%,0%);
-        padding: 20px;
+         .padding(20px);
       }
     }
     .heading2 {
       font-size: 24px;
       font-family: @font;
-      padding-left: 20px;
+      .padding1(0px,0px,0px,20px);
       font-weight: 600;
     }
     .cards {
       display: grid;
       grid-template-columns: 35% 35% 34%;
-      padding: 0px 20px 20px 20px;
+      .padding1(0px,20px,20px,20px);
       font-family: @font;
       font-size: 10px;
       .card1 {
@@ -464,36 +468,36 @@
         }
         .card-row1 {
           text-align: center;
-          padding: 20px 20px 0px 20px;
+          .padding1(20px,20px,0px,20px);
         }
         .spending {
-          padding: 5px;
+          .padding(5px);
         }
       }
       .sup {
         font-size: 17px;
         font-weight: 600;
-        padding-bottom: 10px;
+        .padding1(0px,0px,10px,0px);
       }
       sup {
         font-size: 10px;
-        padding-right: 5px;
+        .padding1(0px,5px,0px,0px);
       }
       .card-row2 {
-        padding: 20px 0px 20px 0px;
+        .padding1(20px,0px,20px,0px);
         align-items: center;
         .button2 {
-          margin: 0px 20px 15px 10px;
+          margin: 0% 15% 10% 4%;
           background: @orange;
           border: none;
-          border-radius: 20px;
+          .border-radius(20px);
           .width(15px,10px);
         }
         .button3 {
-          margin: 0px 20px 0px 10px;
+          margin: 0% 15% 0% 4%;
           background:@skyblue;
           border: none;
-          border-radius: 20px;
+          .border-radius(20px);
           .width(15px,10px);
         }
       }
@@ -506,15 +510,15 @@
         .width(95%,92%);
          img {
           .width(86%,0%);
-          padding: 10px;
+        .padding(10px);
         }
         .card-row1 {
           text-align: center;
-          padding: 20px 20px 0px 20px;
+          .padding1(20px,20px,0px,20px);
         }
         .spending1 {
           color: @colour3;
-          padding: 5px;
+          .padding(5px);
         }
       }
       .inside-card1 {
@@ -524,11 +528,11 @@
         margin: 7px 16px 15px 5px;
         background:@card2;
         p {
-          padding: 13px 2px 0px 0px;
+          .padding1(13px,2px,0px,0px);
         }
         img {
           .width(35px,35px);
-          padding: 22px 5px 20px 9px;
+          .padding1(22px,5px,20px,9px);
         }
         .income1 {
           color: @colour2;
@@ -540,7 +544,7 @@
         .inside-card1();
         border: 1px solid @colour2;
         p {
-          padding: 13px 12px 0px 0px;
+          .padding1(13px,3px,0px,0px);
         }
         .income2 {
           .income1();
@@ -552,7 +556,7 @@
         background: @colour2;
         color: @colour1;
          p {
-          padding: 13px 12px 0px 0px;
+          .padding1(13px,3px,0px,0px);
         }
         .income3 {
           .income1();
