--- a/Tasks/mixin.less
+++ b/Tasks/mixin.less
@@ -2,14 +2,14 @@
 .heading {
   font-weight: bold;
   font-family: @font;
-  padding-left: 20px;
+  .padding1(0px,0px,0px,20px);
 }
 .gear{
   .curser();
   font-size: 20px;
   border: none;
   padding: 9px;
-  border-radius: 5px;
+  .border-radius(5px);
   margin: 0px 10px 0px 0px;
   background:@light-gray;
   color:@colour3;
@@ -20,12 +20,18 @@
 }
 .top-heading {
   border-bottom: 1px solid @colour;
-  padding: 10px 0px 8px 20px;
+  .padding1(10px,0px,8px,20px);
   font-size: smaller;
   h3 {
     text-align: left;
     font-family: @font;
   }
+}
+.grid(@a,@b,@c,@d){
+  grid-template-columns: @a @b @c @d ; 
+}
+.nav-grid(@a,@b,@c,@d,@e){
+  grid-template-columns: @a @b @c @d @e; 
 }
 .border-radius(@radius) {
   border-radius: @radius;
